force-app/main/default/objects/ABSLI_Nominee__c/ABSLI_Nominee__c.object-meta.xml
<CustomObject>
    <description>ABSLI object</description>
    <label>Case Nominee</label>
    <nameField>
        <displayFormat>Nominee-{0000}</displayFormat>
        <label>ABSLI Nominee Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ABSLI Nominees</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>