force-app/main/default/objects/ABSLI_Nominee__c/fields/Action_Item__c.field-meta.xml
<CustomField>
    <fullName>Action_Item__c</fullName>
    <label>Action Item</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Create</fullName>
            </value>
            <value>
                <fullName>Delete</fullName>
            </value>
            <value>
                <fullName>Update</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>