force-app/main/default/objects/ABSLI_Nominee__c/fields/Appointee_Birthdate__c.field-meta.xml
<CustomField>
    <fullName>Appointee_Birthdate__c</fullName>
    <label>Appointee Birthdate</label>
    <type>Date</type>
</CustomField>