force-app/main/default/objects/ABSLI_Nominee__c/fields/Appointee_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Appointee_Last_Name__c</fullName>
    <label>Appointee Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>