force-app/main/default/objects/ABSLI_Nominee__c/fields/Appointee_Relation__c.field-meta.xml
<CustomField>
    <fullName>Appointee_Relation__c</fullName>
    <label>Appointee Relation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BRTHR</fullName>
                <label>Brother</label>
            </value>
            <value>
                <fullName>FATHR</fullName>
                <label>Father</label>
            </value>
            <value>
                <fullName>GFTHR</fullName>
                <label>Grandfather</label>
            </value>
            <value>
                <fullName>GMTHR</fullName>
                <label>Grandmother</label>
            </value>
            <value>
                <fullName>LGRD</fullName>
                <label>Legal Guardian</label>
            </value>
            <value>
                <fullName>MOTHR</fullName>
                <label>Mother</label>
            </value>
            <value>
                <fullName>OTHER</fullName>
                <label>Other</label>
            </value>
            <value>
                <fullName>PAREN</fullName>
                <label>Parent</label>
            </value>
            <value>
                <fullName>RLAT</fullName>
                <label>Relative</label>
            </value>
            <value>
                <fullName>SISTR</fullName>
                <label>Sister</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>