force-app/main/default/objects/ABSLI_Nominee__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>ABSLI Nominees</relationshipLabel>
    <relationshipName>ABSLI_Nominees</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>