force-app/main/default/objects/ABSLI_Nominee__c/fields/Minor__c.field-meta.xml
<CustomField>
    <fullName>Minor__c</fullName>
    <label>Minor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
                <label>Yes</label>
            </value>
            <value>
                <fullName>N</fullName>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>