force-app/main/default/objects/ABSLI_Nominee__c/fields/Minor_Birthdate__c.field-meta.xml
<CustomField>
    <fullName>Minor_Birthdate__c</fullName>
    <label>Minor Birthdate</label>
    <type>Date</type>
</CustomField>