force-app/main/default/objects/ABSLI_Nominee__c/fields/Minor_Relation__c.field-meta.xml
<CustomField>
    <fullName>Minor_Relation__c</fullName>
    <label>Minor Relation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>