force-app/main/default/objects/ABSLI_Nominee__c/fields/Nominee_Birthdate__c.field-meta.xml
<CustomField>
    <fullName>Nominee_Birthdate__c</fullName>
    <label>Nominee Birthdate</label>
    <type>Date</type>
</CustomField>