force-app/main/default/objects/ABSLI_Nominee__c/fields/Nominee_Update_1__c.field-meta.xml
<CustomField>
    <fullName>Nominee_Update_1__c</fullName>
    <label>Nominee Update 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>