force-app/main/default/objects/ABSLI_Nominee__c/fields/Relation__c.field-meta.xml
<CustomField>
    <fullName>Relation__c</fullName>
    <label>Relation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SPOUS</fullName>
                <label>Spouse</label>
            </value>
            <value>
                <fullName>MOTHR</fullName>
                <label>Mother</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>